--- a/_config.yml
+++ b/_config.yml
@@ -265,8 +265,10 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
       share: true
       related: true
+      sidebar:
+        nav: "docs"
