--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 main:
-  - title: "Home"
-    url: /
+  - title: "Contribute via Github!"
+    url: https://github.com/cbarina/rexpat
  # - title: "Posts"
  #   url: /year-archive/
  # - title: "Categories"
  #   url: /categories/
- # - title: "Tags"
- #   url: /tags/
+  - title: "Tags"
+    url: /tags/
  # - title: "Pages"
  #   url: /page-archive/
  # - title: "Collections"
@@ -20,3 +20,4 @@ docs:
     children:
       - title: "Monrovia, Liberia"
         url: /monrovia-liberia/
+    
